# GO-VHACD

./: .gitignore  LICENSE  README.md
VHACD-src/: .gitignore  CMakeLists.txt  cmake_install.cmake
VHACD-src/VHACD_Lib/: cmake_install.cmake
VHACD-src/VHACD_Lib/vhacd/: vhacd-targets.cmake
VHACD-src/main/: CMakeLists.txt
VHACD-src/main/inc/: Decomposer.h  OBJ_Loader.h  README.md
VHACD-src/main/src/: Decomposer.cpp  main.cpp
VHACD-src/test/: cmake_install.cmake  testVHACD
scripts/: cmake_common.cmake
src/main/: main.go
